# antibodydevelopability

./: .gitignore  GOALS.md  MEMORY.md  README.md  pyproject.toml
OAS_bulk_download/: antibody_pipeline_final_mid_oas-2.ipynb  evaluation_final_mid_oas_pretrain.ipynb
data/: GDPa3_20260106.csv
data/SSH2.0/: jain_et_al_biophysical_data_ssh2_0.ipynb  jain_et_al_ssh2_training.csv
generative_model/final/: evaluation_fixed_protattba (2).ipynb  evaluation_fixed_v2.ipynb  notebook1a_data_preprocessing_section1 (2).ipynb  notebook1b_data_preprocessing_section1_1 (2).ipynb  notebook3_model_training_revised (1) (1).ipynb
legacy/OAS_bulk_download/: evaluation_final_mid_oas_pretrain.ipynb
legacy/generative_model/: evaluation_final_mid.ipynb
legacy/generative_model/final/: evaluation_fixed_protattba.ipynb
notebooks/: 01_ssh2_gdpa1_contamination.ipynb  02_hic_oracle_experiment.ipynb  README.md
results/: hic_results.csv
scripts/: README.md  convert_gdpa3_to_csv.py  pseudolabel_oas.py  run_hic_experiment.py
src/abdev/: __init__.py  config.py  oracle.py  viz.py  weaksup.py
src/abdev/backbone/: __init__.py  evodiff_adapter.py  sampler.py  source.py
src/abdev/data/: __init__.py  embeddings.py  gdpa1.py  gdpa3.py  oas.py
src/abdev/eval/: __init__.py  cv.py  metrics.py
src/abdev/guidance/: __init__.py  composite.py  posterior_tempering.py
src/abdev/scorers/: __init__.py  base.py  ensemble.py  esm2.py  naturalness.py  physics.py  ssh2.py
ssh2cli/: README.md  build_macos.sh  ssh2.py  ssh2_core.py
ssh2cli/data/: example_HC.fasta  example_LC.fasta
ssh2cli/test/: example_heavy_chain.fasta  example_light_chain.fasta
tests/: test_data.py  test_embeddings.py  test_metrics.py  test_smoke.py
